deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictactoe
  labels:
    app: tictactoe
spec:
  replicas: 1  # Number of pods to run
  selector:
    matchLabels:
      app: tictactoe
  template:
    metadata:
      labels:
        app: tictactoe
    spec:
      containers:
        - name: tictactoe-php-fpm
          image: eu-frankfurt-1.ocir.io/fr5wxy9hihw0/tictactoe:latest
          ports:
            - containerPort: 9000
        - name: tictactoe-nginx
          image: nginx:1.28-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tictactoe-nginx-config
              mountPath: /etc/nginx/conf.d
            - name: app-files
              mountPath: /var/www/html
              readOnly: true
      volumes:
        - name: tictactoe-nginx-config
          configMap:
            name: tictactoe-nginx-config
        - name: app-files
          emptyDir: {}
      imagePullSecrets:
        - name: free-registry-secret2
---
apiVersion: v1
kind: Service
metadata:
  name: tictactoe
spec:
  selector:
    app: tictactoe
  ports:
    - protocol: TCP
      port: 80  # Service port
      targetPort: 80  # Container port
  type: ClusterIP  # Changed from LoadBalancer to ClusterIP
